--- a/client/my-app/src/components/AboutHomePage.scss
+++ b/client/my-app/src/components/AboutHomePage.scss
@@ -1,5 +1,5 @@
 #aboutPic {
-background-image: url("./images/cattlePic1.jpg");
+background-image: url("./images/catPic.jpg");
 background-size: cover;
 height: 200px;
 margin-left: 5%;
