--- a/client/my-app/src/components/ServicesHomePage.scss
+++ b/client/my-app/src/components/ServicesHomePage.scss
@@ -1,14 +1,21 @@
+$bubbleColor: #ccc3b3;
+$mainFont: 'Gochi Hand', cursive;
+
 #services {
     height: 100%;
 }
 
 .speech-bubble {
 	position: relative;
-	background: red;
-	border-radius: .4em;
+	background: $bubbleColor;
+	border-radius: .8em;
 	height: 100px;
-	width: 350px;
-	margin: 3% 0 3% 10%;
+	width: 550px;
+	margin: 3% 0 -10% 20%;
+	font-family: $mainFont;
+	padding-left: 2%;
+	padding-top: 2%'';
+	font-size: 22px;
 
 }
 
@@ -20,9 +27,18 @@
 	width: 0;
 	height: 0;
 	border: 20px solid transparent;
-	border-top-color: red;
+	border-top-color: $bubbleColor;
 	border-bottom: 0;
 	border-left: 0;
 	margin-left: -10px;
 	margin-bottom: -20px;
+}
+
+#serviesPara {
+	float: right;
+	margin-top: 13%;
+}
+
+#servicesStatement {
+	font-size: 14px;
 }
