started about section on home page by adding float right header and paragraph

--- a/client/my-app/src/components/AboutHomePage.css
+++ b/client/my-app/src/components/AboutHomePage.css
@@ -1,8 +1,15 @@
 #aboutPic {
   background-image: url("./images/catPic.jpg");
   background-size: cover;
-  height: 200px;
+  height: 400px;
   margin-left: 5%;
   margin-right: 5%; }
+
+#aboutSecOne {
+  float: right;
+  margin-left: 50%; }
+
+#aboutHeader {
+  text-decoration: underline; }
 
 /*# sourceMappingURL=AboutHomePage.css.map */
